# chat-prd2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: CLAUDE.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_project_state_and_prd_snapshot.py  0003_add_conversation_messages.py  0003_add_project_session_created_at.py  0004_add_project_session_updated_at.py  0005_add_llm_model_configs.py  0005_add_message_created_at.py  0006_add_assistant_reply_versions.py  0007_add_agent_turn_decisions.py  0008_add_recommended_usage_to_llm_model_configs.py  0009_add_recommended_scene_to_llm_model_configs.py  d6068a59fd07_merge_heads.py
apps/api/app/: __init__.py  main.py
apps/api/app/agent/: decision_engine.py  extractor.py  finalize_flow.py  pm_mentor.py  prd_updater.py  prompts.py  readiness.py  reply_composer.py  runtime.py  suggestion_planner.py  types.py  understanding.py  (+1 more)
apps/api/tests/: conftest.py  test_agent_decision_engine.py  test_agent_reply_composer.py  test_agent_runtime.py  test_agent_suggestion_planner.py  test_agent_types_contract.py  test_agent_understanding.py  test_auth.py  test_config.py  test_finalize_session.py  test_health.py  test_message_pipeline_modules.py  test_message_service_modules.py  test_message_state.py  test_messages_service.py  test_messages_stream.py  test_model_configs.py  test_model_gateway.py  test_models.py  test_pm_mentor.py  test_prd_review.py  test_prd_updater.py  test_readiness.py  test_sessions.py
(+259 files in other folders)
